[feat] 임부, 노인, 마약류, 일반 의약품 약물 api와 비교